k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: date-app
  labels:
    app: date-app
spec:
  type: ClusterIP
  selector:
    app: date-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
