k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: date-app
spec:
  ingressClassName: nginx
  rules:
    - host: date-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: date-app
                port:
                  number: 80
